fixe deprecated constructor for Integer and Boolean, replaced by factories